# codex-proxy

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
config/: config.json  requirements.txt
config/codex/: config.e2e.toml  config.toml
docs/: README.md  auto-compaction.md  models.md  sessions.md
docs/implementation/: minimax-provider-impl-plan.md  minimax_phase0_namespace_plan.md  minimax_provider_optimize_plan.md
docs/research/: mcp_tool_research.md  tool-call-protocol-research.md
scripts/: control.sh
src/: access.rs  error.rs  lib.rs  main.rs  server.rs  session.rs  state.rs  ui.rs  usage.rs  validator.rs
src/account_pool/: mod.rs  pool.rs  routing.rs
src/auth/: mod.rs
src/codex_proxy/: auth.py  config.py  main.py  normalizer.py  server.py  ui.py
src/codex_proxy/providers/: base.py  gemini.py  gemini_stream.py  gemini_utils.py  zai.py  zai_stream.py
src/config/: mod.rs
src/normalizer/: mod.rs
src/providers/: base.rs  gemini.rs  gemini_stream.rs  gemini_utils.rs  minimax.rs  minimax_session.rs  minimax_stream.rs  minimax_wire.rs  mod.rs  openai.rs  openrouter.rs  zai.rs  zai_stream.rs
src/schema/: common.rs  openai.rs  sse.rs
src/ui/: index.html
tests/: minimax_e2e.rs  minimax_integration.rs  test_config.py  test_e2e_codex.py  test_server.py
