[package]
name = "codex-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
fp-agent = { path = "third_party/FerroPhase/crates/fp-agent" }
parking_lot = "0.12"
once_cell = "1"
thiserror = "2"
regex = "1"
async-stream = "0.3"
bytes = "1"
rand = "0.8"
sha2 = "0.10"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
wiremock = "0.6"
tracing-test = "0.2"

[profile.release]
opt-level = 3
lto = true
