[project]
name = "codex-proxy"
version = "0.1.0"
description = "An OpenAI Responses API proxy for Gemini and Z.AI (GLM) providers."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "orjson>=3.9.0",
]

[project.scripts]
codex-proxy = "codex_proxy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_proxy"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
src = ["src"]

[tool.mypy]
ignore_missing_imports = true
